--- a/index/Neural__2/Neural__2.html
+++ b/index/Neural__2/Neural__2.html
@@ -2,7 +2,12 @@
 <head>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis"></script>
-    
+      <!-- подключение TensorFlow.js -->
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
+  <!-- подключение tfjs-vis -->
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis@1.0.2/dist/tfjs-vis.umd.min.js"></script>
+
+
     <link rel="stylesheet" href="Neural__2.css">
 </head>
 <body>
@@ -40,7 +45,7 @@
             наиболее похоже на каракули пользователя и выдает результат.
         </h3>
         <h2>
-            Не вкратце. С кодом, и другими вещми, которые вы, вероятно, 
+            Не вкратце. С кодом, и другими вещами, которые вы, вероятно, 
             не поймете
         </h2>
         <h3>
