--- a/index/Neural__3/neural__3.html
+++ b/index/Neural__3/neural__3.html
@@ -12,7 +12,7 @@
 <body>
     <h1 class="title">Нейронная сеть, определяющая, что она видит на вебкамере компьютера. </h1>
 
-    <h3>На этот раз, я решил написать нейронную сеть не с TensorFlow, а с помощью Teachable Machine.</h3>
+    <h3>На этот раз, я решил создать нейронную сеть не с TensorFlow, а с помощью Teachable Machine.</h3>
     <h3>
         Teachable Machine - это программа, написанная на TensorFlow.js. Ее суть в том, что она максимально
         упрощает создание классификаторов изображений. С помощью этой программы я могу в несколько кликков
