--- a/index/index.html
+++ b/index/index.html
@@ -26,7 +26,7 @@
                 <a href="./Neural__2/neural__2.html">
                 <h2>Нейросеть, распознающая рукописные цифры</h2>
                 <img src="./Images/neural__2__preview.png" alt="preview">
-                <h3>Моя вторая нейронная сеть, написанная на TensorFlow.js. Задаяа этой нейронной сети - распознавать цифры, написанные от руки.</h3>
+                <h3>Моя вторая нейронная сеть, написанная на TensorFlow.js. Задачаа этой нейронной сети - распознавать цифры, написанные от руки.</h3>
                 </a>
             </div>
 
