--- a/index/Neural__1/neural__1.html
+++ b/index/Neural__1/neural__1.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./neural__1.css">
+    <link href="//cdn.muicss.com/mui-0.10.3/css/mui.min.css" rel="stylesheet" type="text/css" />
+    <script src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js"></script>
     <!-- подключение TensorFlow.js -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
   <!-- подключение tfjs-vis -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis@1.0.2/dist/tfjs-vis.umd.min.js"></script>
 </head>
 <body>
+<div class="mui-container">
     <h1>Моя первая нейронная сеть</h1>
     <h2>Метод работы нейросети описан в проекте</h2>
     <!-- подключение файла в котором, я буду программировать нейросеть -->
+</div>
     <script type="text/javascript" src="./neural__1.js"></script>
 </body>
 </html>
