--- a/index/Neural__5/index.html
+++ b/index/Neural__5/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Распознавание звуков с ml5</title>
-    <link rel="stylesheet" href="index.css">
+<!--    <link rel="stylesheet" href="index.css">-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+    <link href="//cdn.muicss.com/mui-0.10.3/css/mui.min.css" rel="stylesheet" type="text/css" />
+    <script src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js"></script>
 </head>
-<body>
+<body class="mui-container">
     <h1>Распознавание звуков с ml5</h1>
     <p>
         В ml5 есть датасет - SpeechCommands18w, который содержит в себе множество
