--- a/index/index.html
+++ b/index/index.html
@@ -4,46 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
+    <link href="//cdn.muicss.com/mui-0.10.3/css/mui.min.css" rel="stylesheet" type="text/css" />
+    <script src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js"></script>
     <title>Мои нейросети</title>
 </head>
 <body>
-    <div id="Container">
+    <div class="mui-container">
             <h1 class="title">Мои нейросети</h1>
             <h2 class="title">Тут продемонстрированы различные способы создания нейронных сетей на языке JavaScript</h2>
             <hr>
 
-        <div id="Examples">
-            <div class="Example">
+        <ul class="mui-tabs__bar">
+            <li><a data-mui-toggle="tab" data-mui-controls="pane-justified-1">Первая нейронная сеть</a></li>
+            <li><a data-mui-toggle="tab" data-mui-controls="pane-justified-2">Нейросеть распознающая рукописные цифры</a></li>
+            <li><a data-mui-toggle="tab" data-mui-controls="pane-justified-3">Нейросеть созданная с Teachable Machine</a></li>
+            <li><a data-mui-toggle="tab" data-mui-controls="pane-justified-4">Нейросеть созданная с ml5.js</a></li>
+            <li><a data-mui-toggle="tab" data-mui-controls="pane-justified-5">Распознавание голосовых команд с ml5.js</a></li>
+        </ul>
+
+        <div class="mui-tabs__pane mui--is-active" id="pane-justified-1">
+            <div class="card-panel">
                 <a href="./Neural__1/neural__1.html">
                 <h2>Первая нейронная сеть</h2>
-                <img src="./Images/Neural__1__Preview.png" alt="preview">
-                <h3>Моя самая первая нейросеть написанная на TensorFlow.js</h3>
+                <img src="./Images/Neural__1__Preview.png" width="320" alt="preview">
+                <h3>Моя первая нейросеть, написанная на TensorFlow.js</h3>
                 </a>
             </div>
+        </div>
 
-            <div class="Example">
+
+                <div class="mui-tabs__pane" id="pane-justified-2">
+            <div class="card-panel">
                 <a href="./Neural__2/neural__2.html">
                 <h2>Нейросеть, распознающая рукописные цифры</h2>
-                <img src="./Images/neural__2__preview.png" alt="preview">
+                <img src="./Images/neural__2__preview.png" width="320" alt="preview">
                 <h3>Моя вторая нейронная сеть, написанная на TensorFlow.js. Задачаа этой нейронной сети - распознавать цифры, написанные от руки.</h3>
                 </a>
             </div>
+                </div>
 
-            <div class="Example">
+
+            <div class="mui-tabs__pane" id="pane-justified-3">
+            <div class="card-panel">
                 <a href="./Neural__3/neural__3.html">
                 <h2>Нейросеть, созданная с Teachable Machine</h2>
-                <img src="./Images/Neural__3__preview.png" alt="preview">
+                <img src="./Images/Neural__3__preview.png" width="320" alt="preview">
                 <h3>Писать код - тяжело и нудно. Поэтому умные люди из Google создали Teachable Machine,
                     с помощью которого можно создать свой датасет, и свою нейросеть "в пару кликов".
                 </h3>
                 </a>
             </div>
+                </div>
 
-            <div class="Example">
+            <div class="mui-tabs__pane" id="pane-justified-4">
+            <div class="card-panel">
                 <a href="./Neural__4/index.html">
                 <h2>Нейросеть созданная с помощью ml5</h2>
-                <img src="./Images/Neural__4__preview.png" alt="preview">
+                <img src="./Images/Neural__4__preview.png" width="320" alt="preview">
                 <h3>ml5 - это почти тоже самое, что и TensorFlow.js, однако его синтаксис куда проще. 
                     Также он объединяет в себе и TensorFlow.js и TFvis.js, что позволяет упростить код
                     еще сильнее. Короче, ml5 - это TensorFlow.js но с куда более лаконичным и простым
@@ -51,18 +68,19 @@
                 </h3>
                 </a>
             </div>
+                </div>
 
-            <div class="Example">
+        <div class="mui-tabs__pane" id="pane-justified-5">
+            <div class="card-panel">
                 <a href="./Neural__5/index.html">
-                <h2>Распознавание голосовых команд с ml5</h2>
-                <img src="./Images/Neural__5__preview.png" alt="preview">
-                <h3>
-                    Нейросеть, написанная на ml5.js, которая распознает голосовые команды.
-                </h3>
+                    <h2>Распознавание голосовых команд с ml5</h2>
+                    <img src="./Images/Neural__5__preview.png" width="320" alt="preview">
+                    <h3>
+                        Нейросеть, написанная на ml5.js, которая распознает голосовые команды.
+                    </h3>
                 </a>
             </div>
         </div>
-    </div>
     <script type="text/javascript" src="./index.js"></script>
 </body>
 </html>
