--- a/index/Neural__3/neural__3.html
+++ b/index/Neural__3/neural__3.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./neural__3.css">
+<!--    <link rel="stylesheet" href="./neural__3.css">-->
     <title>Neural 3</title>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+    <link href="//cdn.muicss.com/mui-0.10.3/css/mui.min.css" rel="stylesheet" type="text/css" />
+    <script src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js"></script>
 </head>
 <body>
+<div class="mui-container">
     <h1 class="title">Нейронная сеть, определяющая, что она видит на вебкамере компьютера. </h1>
 
     <h3>На этот раз, я решил создать нейронную сеть не с TensorFlow, а с помощью Teachable Machine.</h3>
@@ -25,7 +28,7 @@
     </h3>
 
     <div>Нейросеть "какой цвет?"</div>
-    <button type="button" class="btn" onclick="init()">Start</button>
+    <button class="mui-btn mui-btn--raised" type="button" class="btn" onclick="init()">Start</button>
     <div id="webcam-container"></div>
     <div id="label-container"></div>
     <h3>
@@ -39,5 +42,6 @@
         его в своем проекте. 
     </h3>
     <script type="text/javascript" src="./whatColorIsIt/script.js"></script>
+</div>
 </body>
 </html>
